--- a/Backend/serviexpress/src/main/resources/application.yaml
+++ b/Backend/serviexpress/src/main/resources/application.yaml
@@ -1,10 +1,11 @@
 spring: 
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/serviexpress
+    url: jdbc:mysql://localhost:3306/serviexpress
     username: root
     password: serviexpress
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
-    hibernate:      ddl-auto: create-drop
+    hibernate:
+      ddl-auto: create-drop
       generate-ddl: true
     show-sql: true
