--- a/Frontend/Leer_json/Leer_json/Leer_json.csproj
+++ b/Frontend/Leer_json/Leer_json/Leer_json.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Index.aspx.designer.cs">
       <DependentUpon>Index.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reserva.cs" />
     <Compile Include="Servivio.cs" />
