cliente y empleado extend persona
anotacion creada para el mapeo de las clases clientes y empleados en relacion a tabla padre PERSONAS

--- a/Backend/serviexpress/pom.xml
+++ b/Backend/serviexpress/pom.xml
@@ -54,6 +54,7 @@
 		<dependency>
     		<groupId>mysql</groupId>
     		<artifactId>mysql-connector-java</artifactId>
+    		<version>5.1.43</version><!--poner 8.0.15 en caso de que la variable de innodb sea 8.0.X ver la variable en la base de datos poniendo ' SHOW VARIABLES LIKE "%version%"; ' -->
 		</dependency>		
 	</dependencies>
 	<build>
