--- a/Backend/serviexpress/src/main/resources/application.yaml
+++ b/Backend/serviexpress/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/serviexpress
     username: root
-    password: serviexpress
+    password:
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
