--- a/Backend/serviexpress/src/main/resources/application.yaml
+++ b/Backend/serviexpress/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 spring: 
   datasource:
-    url: jdbc:mysql://localhost:3306/serviexpress
-    username: root
-    password:
-    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:oracle:thin:@localhost:1521:xe
+    username: serviexpress
+    password: serviexpress
+    driver-class-name: oracle.jdbc.driver.OracleDriver
   jpa:
     hibernate:
       ddl-auto: create-drop
