--- a/Backend/serviexpress/pom.xml
+++ b/Backend/serviexpress/pom.xml
@@ -50,11 +50,13 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
-
+		
 		<dependency>
-    		<groupId>mysql</groupId>
-    		<artifactId>mysql-connector-java</artifactId>
-		</dependency>		
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc7</artifactId>
+            <version>12.1.0</version>
+		</dependency>
+			
 	</dependencies>
 	<build>
 		<finalName>serviexpress</finalName>
