--- a/Frontend/Probando/Probando/Probando.csproj
+++ b/Frontend/Probando/Probando/Probando.csproj
@@ -301,7 +301,7 @@
     <Content Include="Views\Vehiculo\Edit.cshtml" />
     <Content Include="Views\Vehiculo\Index.cshtml" />
     <Content Include="Views\Test\Login.cshtml" />
-    <Content Include="Views\Test\Registrar.cshtml" />
+    <Content Include="Views\Servicio\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
