--- a/Frontend/Probando/Probando/Probando.csproj
+++ b/Frontend/Probando/Probando/Probando.csproj
@@ -303,6 +303,7 @@
     <Content Include="Views\Vehiculo\Index.cshtml" />
     <Content Include="Views\Test\Login.cshtml" />
     <Content Include="Views\Servicio\Details.cshtml" />
+    <Content Include="Views\Proveedor\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
